@@ -51,6 +51,8 @@
 1267650600228229401496703205707
 1267650600228229401496703205653
 1267650600228229401496703205707
+18446744073709551533
+18446744073709551653
 0.50000000000000000000000000000000000000
 1.5000000000000000000000000000000000000
 2.5000000000000000000000000000000000000
@@ -153,4 +155,4 @@
 [-100001, [-1, 1; 11, 1; 9091, 1]]
 607926
 607926
-Total time spent: 5909
+Total time spent: 7419
