@@ -19,8 +19,10 @@ forprimestep(p=2^32-50,2^32+30,Mod(1,3),print(p))
 forprimestep(p=2^64-70,2^64+50,Mod(2,3), print(p))
 forprimestep(n=2,,5,if(n>20,break);print(n)) /*backward compat */
 forprimestep(n=2,oo,5,if(n>20,break);print(n))
-forprimestep(n=2^100,,Mod(1,3),if(n>2^100+400,break);print(n))
-forprimestep(n=2^100,oo,Mod(1,3),if(n>2^100+400,break);print(n))
+forprimestep(n=2^100,,Mod(2,3),if(n>2^100+400,break);print(n))
+forprimestep(n=2^100,oo,Mod(2,3),if(n>2^100+400,break);print(n))
+p=18446744073709551533;
+forprimestep(i=p,p+400,10,print(i))
 
 for(a=0.5,3,print(a))
 for(a=1,10, print(a+=2))
