@@ -12,6 +12,7 @@ Done for version 2.12.0 (released ??/??/20??):
      8- sumeulerrat(y/x^2,1) -> junk
 HC   9- incgam(-1000.4,2) -> SEGV
     10- mfatkininit(mfinit([366,2]),2) -> precision error
+    11- forprimestep: wrong when wrapping over word boundary (2^32 or 64) [#2071]
 
   Changed
      1- [libpari] gp_filter return value is now allocated on the stack
